# LearnCmake

./: README.md
01-basic/A-hello-cmake/: CMakeLists.txt  LearnCmake-Vs.cpp
01-basic/Compile-Flags/: CMakeLists.txt  main.cpp
01-basic/build-type/: CMakeLists.txt  main.cpp
01-basic/hello-headers/: CMakeLists.txt
01-basic/hello-headers/include/: Hello.h
01-basic/hello-headers/src/: Hello.cpp
01-basic/static-library/: CMakeLists.txt
01-basic/static-library/include/static/: Hello.h
01-basic/static-library/src/: Hello.cpp  main.cpp
